kubernetes/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-blog
  template:
    metadata:
      labels:
        app: wp-blog
    spec:
      containers:
      - name: wp-blog-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: wp-persistent-storage
          mountPath: /var/www/html

      - name: wp-blog-php
        image: wordpress:fpm
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: config
        configMap:
          name: wp-nginx-config
          items:
          - key: config
            path: site.conf

      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - wp-blog
              topologyKey: "kubernetes.io/hostname"
