kubernetes/wordpress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-nginx-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: wp-blog
