kubernetes/wordpress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  ingressClassName: external-nginx
  rules:
    - host: systemofbizkitkornpark.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: blog-nginx-servic
                port:
                  number: 8080
